[package]
name = "tree_bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.5.1"
rayon = "1.10.0"

aptos-crypto = { git = "https://github.com/aptos-labs/aptos-core.git" }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto.git" }

[[bench]]
name = "hashing"
harness = false

[patch.crates-io]
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }
